## Makefile.am -- Process this file with automake to produce Makefile.in


# Data: lua scripts
applets_desktopjivedir = $(pkgdatadir)/applets/DesktopJive
dist_applets_desktopjive_DATA = \
	share/applets/DesktopJive/DesktopJiveMeta.lua

applets_quitdir = $(pkgdatadir)/applets/Quit
dist_applets_quit_DATA = \
	share/applets/Quit/QuitMeta.lua \
	share/applets/Quit/strings.txt

applets_setupwelcomedir = $(pkgdatadir)/applets/SetupWelcome
dist_applets_setupwelcome_DATA = \
	share/applets/SetupWelcome/SetupWelcomeApplet.lua \
	share/applets/SetupWelcome/SetupWelcomeMeta.lua \
	share/applets/SetupWelcome/strings.txt
