## Makefile.am -- Process this file with automake to produce Makefile.in


# Data: lua scripts
applets_desktopjivedir = $(pkgdatadir)/applets/DesktopJive
dist_applets_desktopjive_DATA = \
	share/applets/DesktopJive/DesktopJiveMeta.lua

applets_quitdir = $(pkgdatadir)/applets/Quit
dist_applets_quit_DATA = \
	share/applets/Quit/QuitMeta.lua \
	share/applets/Quit/strings.txt

applets_setupwelcomedir = $(pkgdatadir)/applets/SetupWelcome
dist_applets_setupwelcome_DATA = \
	share/applets/SetupWelcome/SetupWelcomeApplet.lua \
	share/applets/SetupWelcome/SetupWelcomeMeta.lua \
	share/applets/SetupWelcome/strings.txt

# Fullscreen skin
applets_fullscreenskindir = $(pkgdatadir)/applets/FullscreenSkin
dist_applets_fullscreenskin_DATA = \
	share/applets/FullscreenSkin/FullscreenSkinApplet.lua \
	share/applets/FullscreenSkin/FullscreenSkinMeta.lua

applets_fullscreenskin_imagesdir = $(pkgdatadir)/applets/FullscreenSkin/images
dist_applets_fullscreenskin_images_DATA = \
	share/applets/FullscreenSkin/images/album_noartwork_154.png \
	share/applets/FullscreenSkin/images/album_noartwork_166.png \
	share/applets/FullscreenSkin/images/album_noartwork_184.png \
	share/applets/FullscreenSkin/images/album_noartwork_186.png \
	share/applets/FullscreenSkin/images/album_noartwork_375.png \
	share/applets/FullscreenSkin/images/album_noartwork_56.png \
	share/applets/FullscreenSkin/images/album_noartwork.png \
	share/applets/FullscreenSkin/images/album_shadow_166.png \
	share/applets/FullscreenSkin/images/album_shadow_184.png \
	share/applets/FullscreenSkin/images/bghighlight_bl.png \
	share/applets/FullscreenSkin/images/bghighlight_b.png \
	share/applets/FullscreenSkin/images/bghighlight_br.png \
	share/applets/FullscreenSkin/images/bghighlight_l.png \
	share/applets/FullscreenSkin/images/bghighlight.png \
	share/applets/FullscreenSkin/images/bghighlight_r.png \
	share/applets/FullscreenSkin/images/bghighlight_tl.png \
	share/applets/FullscreenSkin/images/bghighlight_tr.png \
	share/applets/FullscreenSkin/images/border_l.png \
	share/applets/FullscreenSkin/images/border.png \
	share/applets/FullscreenSkin/images/border_r.png \
	share/applets/FullscreenSkin/images/btn_selector_add.png \
	share/applets/FullscreenSkin/images/btn_selector_play.png \
	share/applets/FullscreenSkin/images/button_bl.png \
	share/applets/FullscreenSkin/images/button_b.png \
	share/applets/FullscreenSkin/images/button_br.png \
	share/applets/FullscreenSkin/images/button_l.png \
	share/applets/FullscreenSkin/images/button.png \
	share/applets/FullscreenSkin/images/button_r.png \
	share/applets/FullscreenSkin/images/button_tl.png \
	share/applets/FullscreenSkin/images/button_t.png \
	share/applets/FullscreenSkin/images/button_tr.png \
	share/applets/FullscreenSkin/images/checkbox_off.png \
	share/applets/FullscreenSkin/images/checkbox_on.png \
	share/applets/FullscreenSkin/images/checkbox_white.png \
	share/applets/FullscreenSkin/images/checkbox_white_selected.png \
	share/applets/FullscreenSkin/images/head_albums.png \
	share/applets/FullscreenSkin/images/head_artists.png \
	share/applets/FullscreenSkin/images/header_BL.png \
	share/applets/FullscreenSkin/images/header_BR.png \
	share/applets/FullscreenSkin/images/header_M.png \
	share/applets/FullscreenSkin/images/header_TL.png \
	share/applets/FullscreenSkin/images/header_TR.png \
	share/applets/FullscreenSkin/images/head_favorites.png \
	share/applets/FullscreenSkin/images/head_genres.png \
	share/applets/FullscreenSkin/images/head_home.png \
	share/applets/FullscreenSkin/images/head_infobrowser.png \
	share/applets/FullscreenSkin/images/head_internet_radio.png \
	share/applets/FullscreenSkin/images/head_musicfolder.png \
	share/applets/FullscreenSkin/images/head_music_library.png \
	share/applets/FullscreenSkin/images/head_mymusic.png \
	share/applets/FullscreenSkin/images/head_newmusic.png \
	share/applets/FullscreenSkin/images/head_playlist.png \
	share/applets/FullscreenSkin/images/head_quarter_note.png \
	share/applets/FullscreenSkin/images/head_random.png \
	share/applets/FullscreenSkin/images/head_search.png \
	share/applets/FullscreenSkin/images/head_settings.png \
	share/applets/FullscreenSkin/images/head_years.png \
	share/applets/FullscreenSkin/images/helpbox_l.png \
	share/applets/FullscreenSkin/images/helpbox.png \
	share/applets/FullscreenSkin/images/helpbox_r.png \
	share/applets/FullscreenSkin/images/helpbox_tl.png \
	share/applets/FullscreenSkin/images/helpbox_t.png \
	share/applets/FullscreenSkin/images/helpbox_tr.png \
	share/applets/FullscreenSkin/images/icon_battery_0.png \
	share/applets/FullscreenSkin/images/icon_battery_1.png \
	share/applets/FullscreenSkin/images/icon_battery_2.png \
	share/applets/FullscreenSkin/images/icon_battery_3.png \
	share/applets/FullscreenSkin/images/icon_battery_4.png \
	share/applets/FullscreenSkin/images/icon_battery_ac.png \
	share/applets/FullscreenSkin/images/icon_battery_charging.png \
	share/applets/FullscreenSkin/images/icon_connected_161.png \
	share/applets/FullscreenSkin/images/icon_connected.png \
	share/applets/FullscreenSkin/images/icon_connecting_161.png \
	share/applets/FullscreenSkin/images/icon_connecting_44.png \
	share/applets/FullscreenSkin/images/icon_connecting.png \
	share/applets/FullscreenSkin/images/icon_mode_off.png \
	share/applets/FullscreenSkin/images/icon_mode_pause.png \
	share/applets/FullscreenSkin/images/icon_mode_play.png \
	share/applets/FullscreenSkin/images/icon_nowplaying.png \
	share/applets/FullscreenSkin/images/icon_repeat_off.png \
	share/applets/FullscreenSkin/images/icon_repeat.png \
	share/applets/FullscreenSkin/images/icon_repeat_song.png \
	share/applets/FullscreenSkin/images/icon_shuffle_album.png \
	share/applets/FullscreenSkin/images/icon_shuffle_off.png \
	share/applets/FullscreenSkin/images/icon_shuffle.png \
	share/applets/FullscreenSkin/images/icon_wireless_1.png \
	share/applets/FullscreenSkin/images/icon_wireless_1_shadow.png \
	share/applets/FullscreenSkin/images/icon_wireless_2.png \
	share/applets/FullscreenSkin/images/icon_wireless_2_shadow.png \
	share/applets/FullscreenSkin/images/icon_wireless_3.png \
	share/applets/FullscreenSkin/images/icon_wireless_3_shadow.png \
	share/applets/FullscreenSkin/images/icon_wireless_4.png \
	share/applets/FullscreenSkin/images/icon_wireless_4_shadow.png \
	share/applets/FullscreenSkin/images/icon_wireless_noserver.png \
	share/applets/FullscreenSkin/images/icon_wireless_off.png \
	share/applets/FullscreenSkin/images/menu_album_noartwork_125.png \
	share/applets/FullscreenSkin/images/menu_album_noartwork_150.png \
	share/applets/FullscreenSkin/images/menu_album_noartwork_56.png \
	share/applets/FullscreenSkin/images/menu_album_noartwork.png \
	share/applets/FullscreenSkin/images/menu_album_selection_bl.png \
	share/applets/FullscreenSkin/images/menu_album_selection_b.png \
	share/applets/FullscreenSkin/images/menu_album_selection_br.png \
	share/applets/FullscreenSkin/images/menu_album_selection_l.png \
	share/applets/FullscreenSkin/images/menu_album_selection.png \
	share/applets/FullscreenSkin/images/menu_album_selection_r.png \
	share/applets/FullscreenSkin/images/menu_album_selection_tl.png \
	share/applets/FullscreenSkin/images/menu_album_selection_t.png \
	share/applets/FullscreenSkin/images/menu_album_selection_tr.png \
	share/applets/FullscreenSkin/images/menu_check.png \
	share/applets/FullscreenSkin/images/menu_check_selected.png \
	share/applets/FullscreenSkin/images/menu_nowplaying.png \
	share/applets/FullscreenSkin/images/menu_nowplaying_selected.png \
	share/applets/FullscreenSkin/images/menu_playlist.png \
	share/applets/FullscreenSkin/images/menu_selection_box_bl.png \
	share/applets/FullscreenSkin/images/menu_selection_box_b.png \
	share/applets/FullscreenSkin/images/menu_selection_box_br.png \
	share/applets/FullscreenSkin/images/menu_selection_box_l.png \
	share/applets/FullscreenSkin/images/menu_selection_box.png \
	share/applets/FullscreenSkin/images/menu_selection_box_r.png \
	share/applets/FullscreenSkin/images/menu_selection_box_tl.png \
	share/applets/FullscreenSkin/images/menu_selection_box_t.png \
	share/applets/FullscreenSkin/images/menu_selection_box_tr.png \
	share/applets/FullscreenSkin/images/mini_albums.png \
	share/applets/FullscreenSkin/images/mini_artists.png \
	share/applets/FullscreenSkin/images/mini_favorites.png \
	share/applets/FullscreenSkin/images/mini_genres.png \
	share/applets/FullscreenSkin/images/mini_home.png \
	share/applets/FullscreenSkin/images/mini_infobrowser.png \
	share/applets/FullscreenSkin/images/mini_internet_radio.png \
	share/applets/FullscreenSkin/images/mini_musicfolder.png \
	share/applets/FullscreenSkin/images/mini_music_library.png \
	share/applets/FullscreenSkin/images/mini_mymusic.png \
	share/applets/FullscreenSkin/images/mini_newmusic.png \
	share/applets/FullscreenSkin/images/mini_nowplaying.png \
	share/applets/FullscreenSkin/images/mini_playlist.png \
	share/applets/FullscreenSkin/images/mini_quarter_note.png \
	share/applets/FullscreenSkin/images/mini_random.png \
	share/applets/FullscreenSkin/images/mini_search.png \
	share/applets/FullscreenSkin/images/mini_settings.png \
	share/applets/FullscreenSkin/images/mini_years.png \
	share/applets/FullscreenSkin/images/navcluster.png \
	share/applets/FullscreenSkin/images/note.png \
	share/applets/FullscreenSkin/images/pointer_nowplaying_L.png \
	share/applets/FullscreenSkin/images/pointer_nowplaying_R.png \
	share/applets/FullscreenSkin/images/pointer_selector_L.png \
	share/applets/FullscreenSkin/images/pointer_selector_R.png \
	share/applets/FullscreenSkin/images/popup_alarm_icon.png \
	share/applets/FullscreenSkin/images/popup_battery_low_icon.png \
	share/applets/FullscreenSkin/images/popupbox_bl.png \
	share/applets/FullscreenSkin/images/popupbox_b.png \
	share/applets/FullscreenSkin/images/popupbox_br.png \
	share/applets/FullscreenSkin/images/popupbox_l.png \
	share/applets/FullscreenSkin/images/popupbox.png \
	share/applets/FullscreenSkin/images/popupbox_r.png \
	share/applets/FullscreenSkin/images/popupbox_tl.png \
	share/applets/FullscreenSkin/images/popupbox_t.png \
	share/applets/FullscreenSkin/images/popupbox_tr.png \
	share/applets/FullscreenSkin/images/popup_fav_heart_bkgrd.png \
	share/applets/FullscreenSkin/images/popup_locked_icon.png \
	share/applets/FullscreenSkin/images/popup_playlist_icon.png \
	share/applets/FullscreenSkin/images/popup_shutdown_icon.png \
	share/applets/FullscreenSkin/images/radiobutton_off.png \
	share/applets/FullscreenSkin/images/radiobutton_on.png \
	share/applets/FullscreenSkin/images/radio_white.png \
	share/applets/FullscreenSkin/images/radio_white_selected.png \
	share/applets/FullscreenSkin/images/scrollbar_bkgroundbottom.png \
	share/applets/FullscreenSkin/images/scrollbar_bkground_b.png \
	share/applets/FullscreenSkin/images/scrollbar_bkgroundmid.png \
	share/applets/FullscreenSkin/images/scrollbar_bkground.png \
	share/applets/FullscreenSkin/images/scrollbar_bkgroundtop.png \
	share/applets/FullscreenSkin/images/scrollbar_bkground_t.png \
	share/applets/FullscreenSkin/images/scrollbar_B_mouse.png \
	share/applets/FullscreenSkin/images/scrollbar_bodybottom.png \
	share/applets/FullscreenSkin/images/scrollbar_bodymid.png \
	share/applets/FullscreenSkin/images/scrollbar_bodytop.png \
	share/applets/FullscreenSkin/images/scrollbar_B.png \
	share/applets/FullscreenSkin/images/scrollbar_M.png \
	share/applets/FullscreenSkin/images/scrollbar_thumb_B.png \
	share/applets/FullscreenSkin/images/scrollbar_thumb_M.png \
	share/applets/FullscreenSkin/images/scrollbar_thumb_T.png \
	share/applets/FullscreenSkin/images/scrollbar_T_mouse.png \
	share/applets/FullscreenSkin/images/scrollbar_T.png \
	share/applets/FullscreenSkin/images/selection_add.png \
	share/applets/FullscreenSkin/images/selection_play.png \
	share/applets/FullscreenSkin/images/selection_right.png \
	share/applets/FullscreenSkin/images/selection_right_textentry.png \
	share/applets/FullscreenSkin/images/selection_wait.png \
	share/applets/FullscreenSkin/images/selector_BL.png \
	share/applets/FullscreenSkin/images/selector_BR.png \
	share/applets/FullscreenSkin/images/selector_M.png \
	share/applets/FullscreenSkin/images/selector_TL.png \
	share/applets/FullscreenSkin/images/selector_TR.png \
	share/applets/FullscreenSkin/images/slider_bkgrd_l.png \
	share/applets/FullscreenSkin/images/slider_bkgrd.png \
	share/applets/FullscreenSkin/images/slider_bkgrd_r.png \
	share/applets/FullscreenSkin/images/slider_fill_l.png \
	share/applets/FullscreenSkin/images/slider_fill.png \
	share/applets/FullscreenSkin/images/slider_fill_r.png \
	share/applets/FullscreenSkin/images/slider_icon_negative.png \
	share/applets/FullscreenSkin/images/slider_icon_positive.png \
	share/applets/FullscreenSkin/images/slider_volume_fill_L.png \
	share/applets/FullscreenSkin/images/slider_volume_fill_M.png \
	share/applets/FullscreenSkin/images/slider_volume_L.png \
	share/applets/FullscreenSkin/images/slider_volume_M.png \
	share/applets/FullscreenSkin/images/slider_volume_R.png \
	share/applets/FullscreenSkin/images/slider_volume_thumb.png \
	share/applets/FullscreenSkin/images/text_entry_bkgrd_l.png \
	share/applets/FullscreenSkin/images/text_entry_bkgrd.png \
	share/applets/FullscreenSkin/images/text_entry_bkgrd_r.png \
	share/applets/FullscreenSkin/images/text_entry_letter.png \
	share/applets/FullscreenSkin/images/text_entry_select.png \
	share/applets/FullscreenSkin/images/titlebox_bl.png \
	share/applets/FullscreenSkin/images/titlebox_b.png \
	share/applets/FullscreenSkin/images/titlebox_br.png \
	share/applets/FullscreenSkin/images/titlebox_l.png \
	share/applets/FullscreenSkin/images/titlebox.png \
	share/applets/FullscreenSkin/images/titlebox_r.png \
	share/applets/FullscreenSkin/images/titlebox_tl.png \
	share/applets/FullscreenSkin/images/titlebox_t.png \
	share/applets/FullscreenSkin/images/titlebox_tr.png \
	share/applets/FullscreenSkin/images/toast_M.png \
	share/applets/FullscreenSkin/images/toast_TL.png \
	share/applets/FullscreenSkin/images/toast_TR.png \
	share/applets/FullscreenSkin/images/volume_bkgrd_l.png \
	share/applets/FullscreenSkin/images/volume_bkgrd.png \
	share/applets/FullscreenSkin/images/volume_bkgrd_r.png \
	share/applets/FullscreenSkin/images/volume_fill_l.png \
	share/applets/FullscreenSkin/images/volume_fill.png \
	share/applets/FullscreenSkin/images/volume_fill_r.png \
	share/applets/FullscreenSkin/images/volume_speaker_l.png \
	share/applets/FullscreenSkin/images/volume_speaker_r.png
