#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(jive, 0.1, bugs@slimdevices.com)
AC_CONFIG_AUX_DIR([config])
#AC_CONFIG_HEADER([src/config.h])

dnl Detect the canonical host and target build environment
AC_CANONICAL_HOST

AM_INIT_AUTOMAKE

dnl Be pedantic when compiling
if test x"$GCC" = x"yes"
then
	CFLAGS="$CFLAGS -Wall -Werror"
fi


test -n "$profile" && CFLAGS="$CFLAGS $profile" LDFLAGS="$LDFLAGS $profile"

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
